[project]
name = ""
version = ""
description = ""
authors = [
    {name = "skahanium", email = "61221285+skahanium@users.noreply.github.com"},
]
dependencies = [
    "numpy>=1.22.3",
    "notebook>=6.4.12",
]
requires-python = ">=3.10, <3.11"
license = {text = "MIT"}

[tool.pdm]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
